--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,7 @@
 <br>
 <br>
 <h2>Larry Bui</h2>
-<p class="address">2284 South 280th Place &#x2022;  Federal Way, WA 98003 &#x2022; (951) 479-6959 &#x2022; larryb03@uw.edu</p>
+<p class="address"></p>
 <hr class="line1">
 <hr>
 <br>
